# rs2-cache

./: .gitignore  Cargo.toml  LICENSE  README.md  osrs_specifications.md
.github/: readme.md
.github/workflows/: build.yml  nuget.yml  publish.yml  rust.yml
csharp/: OsrsCache.sln  csharp.sln
csharp/CSharp/: Program.cs
csharp/OsrsCache/: IInternals.cs  Internals.cs  Nuget.Projects.props  OsrsCache.csproj  OsrsCacheService.cs  ServiceCollectionExtensions.cs
csharp/OsrsCache.Test/: OsrsCache.Test.csproj  OsrsCacheServiceTests.cs  ServiceCollectionExtensionsTests.cs
data/cache/: main_file_cache.idx10  main_file_cache.idx18  main_file_cache.idx19  main_file_cache.idx2  main_file_cache.idx5  main_file_cache.idx8
data/osrs_cache/: main_file_cache.idx0  main_file_cache.idx1  main_file_cache.idx12  main_file_cache.idx16  main_file_cache.idx20  main_file_cache.idx255  main_file_cache.idx3  main_file_cache.idx4  main_file_cache.idx6  main_file_cache.idx7
docs/: readme.md
examples/: osrs_update_protocol.rs
python/: Main.py  Test.py
rust/: Cargo.toml
rust/src/: archive.rs  cache.rs  checksumtable.rs  djb2.rs  ffi.rs  group.rs  js5_compression.rs  js5_index.rs  js5_masterindex.rs  lib.rs  store.rs  xtea.rs
rust/src/archive/: cache_archive.rs
rust/src/store/: disk_store.rs  flat_file_store.rs
rust/tests/: common.rs  diskstore_test.rs  ffi_test.rs  group_test.rs  integration_test.rs  js5_compression_test.rs  js5_index_test.rs
rust/tests/data/cache/cache-read/: main_file_cache.dat2  main_file_cache.idx0
rust/tests/data/cache/cache-read-bzip2-NOTWORKING/: main_file_cache.dat2  main_file_cache.idx0  main_file_cache.idx255
rust/tests/data/cache/cache-read-encrypted/: main_file_cache.dat2
rust/tests/data/cache/cache-read-named-group/: main_file_cache.dat2  main_file_cache.idx255
rust/tests/data/cache/cache-read-named-group-encrypted/: main_file_cache.dat2  main_file_cache.idx0
src/: archive.rs  checksum.rs  codec.rs  error.rs  extension.rs  index.rs  lib.rs  parse.rs  sector.rs  util.rs
src/definition/: mod.rs  osrs.rs
src/definition/osrs/: inv_def.rs  item_def.rs  loc_def.rs  map_def.rs  npc_def.rs  obj_def.rs  varbit_def.rs
src/loader/: mod.rs  osrs.rs
src/util/: huffman.rs  isaac_rand.rs  xtea.rs
tests/: common.rs  general.rs  inventory.rs  item.rs  location.rs  map.rs  npc.rs  object.rs  read.rs  varbit.rs
