[package]
name = "osrs-cache"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A cache library for the Oldschool Runescape JS5 file system."
repository = "https://github.com/runecore/osrs-cache"
documentation = "https://docs.rs/osrs-cache"
readme = "README.md"
keywords = ["runescape", "osrs"]
exclude = [".gitignore", "data/*"]
categories = ["development-tools", "filesystem"]

[lib]
name = "osrscache"
path = "src/lib.rs"

[dependencies]
crc = "2.1"
nom = "7.0"
whirlpool = { version = "0.10", optional = true }
num-bigint = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0.30"
rune-fs = "0.1"

[dev-dependencies]
sha1 = "0.6"
rune-fs = "0.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
