[package]
name = "osrs-cache"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A cache library for the Oldschool Runescape JS5 file system."
repository = "https://github.com/osrs-rs/osrs-cache"
documentation = "https://docs.rs/osrs-cache"
readme = "README.md"
keywords = ["runescape", "osrs"]
exclude = [".gitignore", "data/*"]
categories = ["development-tools", "filesystem"]

[lib]
name = "osrscache"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
thiserror = "1.0.34"
bzip2 = "0.4"
memmap2 = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
osrs-bytes = "0.0"
flate2 = "1.0"