[package]
name = "rs2-cache"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "A cache library for RS2, based on OpenRS2."
repository = "https://github.com/osrs-rs/rs2-cache"
documentation = "https://docs.rs/rs2-cache"
readme = "../.github/readme.md"
keywords = ["runescape", "osrs", "rs2"]
exclude = [".gitignore", "data/*"]
categories = ["development-tools", "filesystem"]

[lib]
name = "rs2cache"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
thiserror = "1.0.34"
bzip2 = "0.4"
memmap2 = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
osrs-bytes = "0.3"
flate2 = "1.0"
lzma-rs = { version = "0.3", features = ["raw_decoder"] }